--- a/servicoPronto.html
+++ b/servicoPronto.html
@@ -124,7 +124,7 @@ function generateLink() {
   let numerOS = document.getElementById('os').value;
  
  
-  let texto = comp+" senhor(a) "+nomeCliente+", me chamo "+atendente+" e falo da *AstecByte assistência técnica*, passando para informar que o equipamento da *Ordem de serviço Nº "+numerOS+"* esta pronto.";
+  let texto = comp+" senhor(a) "+nomeCliente+", me chamo "+atendente+" e falo da *AstecByte assistência técnica*, estou entrando em contato para informar que o equipamento da *Ordem de serviço Nº "+numerOS+"* esta pronto.";
   
    texto = window.encodeURIComponent(texto);
    if(fone != "" && atendente != ""){
