--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="pt-br">
   <head>
  
@@ -42,9 +42,10 @@
 			  <input type="text" class="form-control" id="atendente" placeholder="Atendente*">
 			  <label for="atendente">Atendente*</label>
 			</div>
-						<div class="d-grid gap-2 mt-2">
+			<div class="d-grid gap-2 mt-2">
 						  <a class="btn btn btn btn-dark" href="servicoPronto.html" type="button" title="Enviar orçamento">Serviço pronto</a>
 						</div>
+	
 			</div>
 				<div class="col-6">
 				
@@ -136,9 +137,9 @@ function generateLink() {
   let laudo = document.getElementById('laudo').value;
   let solucao = document.getElementById('solucao').value;
   let orcamento = document.getElementById('orcamento').value;
-  let cabecalho = "Olá "+comp+" senhor(a) "+nomeCliente+", me chamo "+atendente+" e falo da *AstecByte assistência técnica*, estou entrando em contato para informar o laudo e orçamento do técnico sobre seu equipamento, Ordem de Serviço Nº: "+numerOS;
-  let rodape = "Garantia de serviços 30 dias. \n\n Garantia de peças 90 dias. \n\n Responda com *APROVADO* ou *REPROVADO* para prosseguirmos com sua ordem de serviço.";
-  let texto = cabecalho+"\n\n *Laudo:*\n"+laudo+"\n\n *Solução:*\n"+solucao+"\n\n *orçamento:*\n"+Orcamento+"\n\n"+rodape;
+  let cabecalho = "Olá "+comp+" senhor(a) "+nomeCliente+", me chamo "+atendente+" e falo da *AstecByte assistência técnica*, passando para informar sobre sua Ordem de Serviço Nº: "+numerOS;
+  let rodape = "Garantia de serviços é 30 dias. \n\n Garantia de peças é de 90 dias. \n\n Responda com *APROVADO* ou *REPROVADO* para prosseguirmos com sua ordem de serviço.";
+  let texto = cabecalho+"\n\n *Laudo:*\n"+laudo+"\n\n *Solução:*\n"+solucao+"\n\n *orçamento:*\n"+orcamento+"\n\n"+rodape;
   
    texto = window.encodeURIComponent(texto);
    if(fone != "" && atendente != ""){
