--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ function generateLink() {
   let solucao = document.getElementById('solucao').value;
   let orcamento = document.getElementById('orcamento').value;
   let cabecalho = "Olá "+comp+" Sr(a) *"+nomeCliente+"*, me chamo "+atendente+" e falo da *AstecByte Assistência Técnica*, estou entrando em contato para informar o laudo e orçamento da *Ordem de Serviço Nº "+numerOS+".*";
-  let rodape = "Garantia de serviços: 30 dias. \n\nGarantia de peças: 90 dias.\n\nResponda com *APROVADO* ou *REPROVADO* para prosseguirmos com sua ordem de serviço.\n\n*Horario de funcionamento:\nSegunda a sexta: 08:00 a 17:00\n Sabado: 08:00 as 11:00.*";
+  let rodape = "Garantia de serviços: 30 dias. \n\nGarantia de peças: 90 dias.\n\nResponda com *APROVADO* ou *REPROVADO* para prosseguirmos com sua ordem de serviço.\n\n*Horário de atendimeto: segunda a sexta de 08:00 a 17:00 e aos sabados 08:00 as 11:00.*";
   let texto = cabecalho+"\n\n*Laudo:*\n"+laudo+"\n\n*Solução:*\n"+solucao+"\n\n*Orçamento:*\n"+orcamento+"\n\n"+rodape;
   
    texto = window.encodeURIComponent(texto);
