--- a/servicoPronto.html
+++ b/servicoPronto.html
@@ -124,7 +124,7 @@ function generateLink() {
   let numerOS = document.getElementById('os').value;
  
  
-  let texto = comp+" Sr(a)"+nomeCliente+", me chamo "+atendente+" e falo da *AstecByte Assistência Técnica*, estou entrando em contato para informar que o equipamento da *Ordem de serviço Nº "+numerOS+"* está pronto.\n\nHorário de atendimeto: segunda a sexta de 08:00 a 17:00 e aos sabados 08:00 as 11:00. ";
+  let texto = comp+" Sr(a)"+nomeCliente+", me chamo "+atendente+" e falo da *AstecByte Assistência Técnica*, estou entrando em contato para informar que o equipamento da *Ordem de serviço Nº "+numerOS+"* está pronto.\n\n*Horário de atendimeto: segunda a sexta de 08:00 a 17:00 e aos sabados 08:00 as 11:00.*";
   
    texto = window.encodeURIComponent(texto);
    if(fone != "" && atendente != ""){
