--- a/servicoPronto.html
+++ b/servicoPronto.html
@@ -124,7 +124,7 @@ function generateLink() {
   let numerOS = document.getElementById('os').value;
  
  
-  let texto ="Olá, "+comp+" Sr(a) *"+nomeCliente+"*, me chamo "+atendente+" e falo da *AstecByte Assistência Técnica*, estou entrando em contato para informar que o equipamento da *Ordem de serviço Nº "+numerOS+"* está pronto.\n\n*Horário de atendimento: segunda a sexta-feira das 08h às 17h e aos sábados 08h às 11:00h.*";
+  let texto ="Olá "+comp+" Sr(a) *"+nomeCliente+"*, me chamo "+atendente+" e falo da *AstecByte Assistência Técnica*, estou entrando em contato para informar que o equipamento da *Ordem de serviço Nº "+numerOS+"* está pronto.\n\n*Horário de atendimento: segunda a sexta-feira das 08h às 17h e aos sábados 08h às 11:00h.*";
   
    texto = window.encodeURIComponent(texto);
    if(fone != "" && atendente != ""){
